--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
   <div class="dropdown">
     <button class="dropbtn"><mat-icon>menu</mat-icon></button>
     <div class="dropdown-content">
-      <a routerLink="/">דף הבית</a>
-      <a routerLink="/bridesList">רשימת כלות</a>
-      <a routerLink="/bride/search">חיפוש כלה</a>
+      <a routerLink="/">רשימת כלות</a>
+      <a routerLink="/LogIn">Log_In</a>
+      <a routerLink="/CorrectionsList">רשימת תיקונים</a>
       <a routerLink="/bride/new">כלה חדשה</a>
     </div>
   </div>
