--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .styleButton
@@ -14,3 +12,68 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     text-align: center;
     font-weight: bold;
   }
+  .okButton{
+    background-color: #F4EBD0;
+    border: 0.3rem solid white;
+    border-radius: 0.5rem;
+    width: 8rem;
+}
+.title {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 0;
+}
+.cancelButton {
+  background-color: transparent;
+  border: none;
+}
+/* כפתור הוספה */
+.additionButton {
+  width: 100%;
+  margin-left: 10vw;
+  font-weight: bold;
+  display: inline-block;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  background-color: #F4EBD0;
+  color: black;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+/* הצגת טבלה */
+.table{
+  text-align: center;
+}
+.table th {
+  font-size: 2rem;
+  text-align: center;
+}
+.table td {
+  font-size: 1.7rem; 
+  text-align: center;
+}
+/* מכיל אינפוטים של סינונים */
+.searchContainer{
+  display: flex; 
+  justify-content: center;
+  gap: 10px;
+}
+.searchContainer input{
+  margin-top: 2rem ;
+  text-align: center;
+}
+/* עוברים על שורה בטבלה */
+  
+tr:hover .buttonInTableRow{
+  opacity: 1;
+}
+.buttonInTableRow {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  position: absolute; /* שנה את ה-position ל-absolute */
+}
+/* כותרת נמצאו */
+.amountFound{
+  text-align: center;
+}
